# EspNewGuiInterface

./: .gitignore  Makefile  README.md  build.sh  main2.py  pyproject.toml  resources.qrc  resources_rc.py  simple.qml  tspiot.spec  МоеПриложение.spec  ТС-ПИоТ.spec
old_src/: main.py  resources.qrc  resources_rc.py
old_src/application/: application_storage.py
old_src/controllers/: controlmodule.py  kkt.py
old_src/network/: controlmodule.py  gismt.py  regime_local_module.py  tspiot.py
old_src/ui/: MainView.qml  MainView2.qml
src/: Gadget.ui.qml  MainView.qml  main.py  main2.py  resources.qrc  resources_rc.py
src/application/: application_storage.py  kkt_controller.py
src/controllers/: controlmodule.py  kkt.py
src/core/: config.py  store.py
src/dto/: controlmodule.py  kkt.py  tspiot.py
src/network/: base.py  controlmodule.py  gis_mt.py  gismt.py  kkt.py  regime_local_module.py  ts_piot.py  tspiot.py
src/services/: kkt_service.py  tspiot.py
src/storage/: application_storage.py  async_executor.py  cache_manager.py
src/tests/: .env  cash_test_data.py  delete службу ESM.cmd  quick_test.py  quick_test_application_no_UI.py
src/ui/: Gadget.ui.qml  MainView.qml  Qt_Bridge_for_Figma_Community.qmlproject  main.qml  resources.qrc  resources_rc.py  whitelabel.qml
src/workers/: kkt_worker.py
test/: main.py
tests/: main2.py  resources.qrc
tests/gismt/: gismt.py
tests/kkt/: test_kkt_list.py
tests/kkt_2.0/: test_kkt_with_reg.py
tests/kkt_main/: test_kkt_with_reg.py
tests/network/: kkt.py
tests/regime/: setup_regime.py
ui/: Gadget.ui.qml
(+52 files in other folders)
